# monument

./: .gitignore  README.md  design.md  pyproject.toml  run_admin.sh  run_api.sh  run_tick.sh
bsp-agent/: Dockerfile  agent.sh  instructions.md  run-agent.sh
bsp-agent/configs/vibe/: .env  config.toml  update_cache.json
bsp-agent/configs/vibe/.vibe/: config.toml  trusted_folders.toml
bsp-agent/utils/: actions.sh  done.sh
data/sims/old-schema/: 10-agents-no-leader.db  small.db
examples/: simulation_template.yaml
experiments/: 01-pure-competition.yaml  01-workers-only.yaml  02-one-manager.yaml  02-one-supervisor.yaml  03-two-managers.yaml  03-two-supervisors.yaml  04-three-managers.yaml  04-three-supervisors.yaml  05-aligned-no-supervisor.yaml  05-aligned-workers-only.yaml  06-aligned-one-manager.yaml  06-aligned-one-supervisor.yaml  07-aligned-two-managers.yaml  07-aligned-two-supervisors.yaml  08-aligned-three-managers.yaml  08-aligned-three-supervisors.yaml
exports/20-agent-no-leader/: data.json  index.html
exports/small/: data.json
src/monument/: __init__.py  agent.sh
src/monument/admin/: __init__.py  app.py
src/monument/agent/: __init__.py  agent.py  agent.sh
src/monument/cli/: api.sh
src/monument/server/: __init__.py  api.py  game_engine.py
src/monument/server/db/: __init__.py  db_manager.py  indexes.sql  pragmas.sql  schema.sql
src/monument/tools/: create_sim.py  export_gif.py  export_sim.py
