[project]
name = "monument"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "usize", email = "winter2718@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "streamlit>=1.53.1",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
